<resources>
    <string name="app_name">TrabalhoFinal</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="link">Novo usuário? Inscreva-se!</string>
    <string name="email">E-mail</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="telefone">Telefone</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="rua">Rua</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="adicionar">Adicionar</string>
    <string name="estado">Estado</string>
    <string name="adicionarnovoendereco">Adicionar Novo Endereço</string>
    <string name="cartao">Número Cartão de Crédito</string>
    <string name="dataExpiracao">Data de Expiração (MM/AAAA)</string>
    <string name="cvv">CVV</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
